--- a/recipes/deviled-eggs.html
+++ b/recipes/deviled-eggs.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     <h1>Deviled Eggs</h1>
-</body>
+    <img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2012/11/14/1/RX-MCCORMICK_Delicious-Deviled-Eggs_s4x3.jpg.rend.hgtvcom.826.620.suffix/1371612115196.jpeg" alt="Deviled Eggs">
+        <h2>Description</h2>
+        <p> <strong>hard-boiled eggs</strong> that have been shelled, cut in half, and filled with a paste made from the egg yolks mixed with other ingredients such as mayonnaise and mustard. They are generally served cold as a side dish, appetizer or a main course during gatherings or parties. The dish's origin can be seen in recipes for boiled, seasoned eggs as far back as ancient Rome, where they were traditionally served as a first course. The dish is popular in Europe and North America.</p>
+        <h4>Brief History</h4>    
+        <p>The deviled egg can be traced back to ancient Rome, where boiled eggs were seasoned with spicy sauces and served as a starter meal during gatherings and feasts. Serving eggs while entertaining guests was so common for wealthy Romans, they even had a saying for it, “ab ova usque ad mala”, meaning “from eggs to apples”, or from the beginning of a meal to the end.</p>    
+            <h4>Ingredients</h4>
+            <ul>
+                <li>8 eggs</li>
+                <li>1/2 teaspoon prepared mustard</li>
+                <li>1 tablespoon creamy salad dressing (such as Miracle Whip®), or as needed</li>
+                <li>salt and pepper to taste</li>
+                <li>1 pinch paprika</li>
+            </ul>
+            <h4>Steps</h4>
+            <ol>
+                <li>Place eggs in saucepan and cover with water. Bring to boil. Cover, remove from heat, and let eggs sit in hot water for 10 to 12 minutes. Remove from hot water and cool in ice water.</li>
+                <li>Peel and cut in half lengthwise. Remove yolks and combine with mustard, salad dressing and salt and pepper. Mix together until smooth.<li>
+                <li>Refill each egg half with the yolk mixture and sprinkle with paprika.</li>
+            </ol>
+    </body>
 </html>
