--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/deviled-eggs.html">Deviled Eggs</a>
+    <ul>
+    <li><a href="./recipes/deviled-eggs.html">Deviled Eggs</a></li>
+    <li><a href="./recipes/blooming-onion.html">Blooming Onion</a></li>
+    </ul>
 </body>
 </html>
