--- a/recipes/deviled-eggs.html
+++ b/recipes/deviled-eggs.html
@@ -24,7 +24,7 @@
             <h4>Steps</h4>
             <ol>
                 <li>Place eggs in saucepan and cover with water. Bring to boil. Cover, remove from heat, and let eggs sit in hot water for 10 to 12 minutes. Remove from hot water and cool in ice water.</li>
-                <li>Peel and cut in half lengthwise. Remove yolks and combine with mustard, salad dressing and salt and pepper. Mix together until smooth.<li>
+                <li>Peel and cut in half lengthwise. Remove yolks and combine with mustard, salad dressing and salt and pepper. Mix together until smooth.</li>
                 <li>Refill each egg half with the yolk mixture and sprinkle with paprika.</li>
             </ol>
     </body>
