fixed some grammatical errors on the steps list

--- a/recipes/blooming-onion.html
+++ b/recipes/blooming-onion.html
@@ -35,11 +35,11 @@
                 <li>Sprinkle onion generously with our mixture. Make sure to get in between all “petals.” Turn onion upside down to remove excess our.</li>
                 <li>Using a ladle, ladle the egg mixture into every crevice. Lift up onion and turn to make sure excess egg drips off.</li>
                 <li>Sprinkle onion very generously with bread crumb mixture. Press into place.</li>
-                <li>10. Place the blooming onion into the Fry Basket of the Power Air Fryer XL. Cover the top with aluminum foil like a tent. Place the Fry Basket into the Power Air Fryer XL.</li>
-                <li>11. Press the M Button to scroll to the Chicken Icon.</li>
-                <li>12. Press the Power Button & adjust cooking time to 10 minutes at 360 degrees. Leave foil on.</li>
-                <li>13. When timer is done, check crispness of the onion. Cook 5-10 more minutes to desired crispness.</li>
-                <li>14. When done, remove carefully and serve with Ranch dressing.</li>        
+                <li>Place the blooming onion into the Fry Basket of the Power Air Fryer XL. Cover the top with aluminum foil like a tent. Place the Fry Basket into the Power Air Fryer XL.</li>
+                <li>Press the M Button to scroll to the Chicken Icon.</li>
+                <li>Press the Power Button & adjust cooking time to 10 minutes at 360 degrees. Leave foil on.</li>
+                <li>When timer is done, check crispness of the onion. Cook 5-10 more minutes to desired crispness.</li>
+                <li>When done, remove carefully and serve with Ranch dressing.</li>        
             </ol>
 </body>
 </html>
