--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
     <li><a href="./recipes/deviled-eggs.html">Deviled Eggs</a></li>
     <li><a href="./recipes/blooming-onion.html">Blooming Onion</a></li>
+    <li><a href="./recipes/cheesecake.html">Cheesecake</a></li>
     </ul>
 </body>
 </html>
