css added and pages styled

--- a/recipes/blooming-onion.html
+++ b/recipes/blooming-onion.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blooming Onion</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Blooming Onion</h1>
-    <img src="../img/blooming-onion.jpeg" alt="Delicious Blooming Onion!">
+    <img class="image" src="../img/blooming-onion.jpeg" alt="Delicious Blooming Onion!">
         <h2>Description</h2>
         <p>A blooming onion, also called onion bloom, onion blossom, onion flower, bloomin' onion, or onion mum, is a dish consisting of one large onion, cut to resemble a flower (after it has expanded while soaking in ice water), battered, and deep-fried, often served with dipping sauce. It is served as an appetizer at some restaurants.</p>
         <h4>Brief History</h4>
