--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-    <li><a href="./recipes/deviled-eggs.html">Deviled Eggs</a></li>
-    <li><a href="./recipes/blooming-onion.html">Blooming Onion</a></li>
-    <li><a href="./recipes/cheesecake.html">Cheesecake</a></li>
-    </ul>
+    <img class="image" src="https://media.istockphoto.com/photos/vintage-cookbook-with-spices-and-herbs-on-rustic-wooden-background-picture-id1161153224?k=20&m=1161153224&s=612x612&w=0&h=dUAhyeGxsrNps3F10e28lOMadzJ8G50dJvwhdcoVJ4E=" alt="recipe book">
+        <ul>
+            <li><a href="./recipes/deviled-eggs.html">Deviled Eggs</a></li><br>
+            <li><a href="./recipes/blooming-onion.html">Blooming Onion</a></li><br>
+            <li><a href="./recipes/cheesecake.html">Cheesecake</a></li>
+        </ul>
 </body>
 </html>
