--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheesecake</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Cheesecake</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8895453.jpg&w=596&h=596&c=sc&poi=face&q=60" alt="Delicious cheesecake">
+    <img class="image" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8895453.jpg&w=596&h=596&c=sc&poi=face&q=60" alt="Delicious cheesecake">
         <h2>Description</h2>
         <p>Cheesecake is a sweet dessert consisting of one or more layers. The main, and thickest, layer consists of a mixture of a soft, fresh cheese (typically cottage cheese, cream cheese or ricotta), eggs, and sugar. If there is a bottom layer, it most often consists of a crust or base made from crushed cookies (or digestive biscuits), graham crackers, pastry, or sometimes sponge cake. Cheesecake may be baked or unbaked (and is usually refrigerated).</p>
             <h4>Ingredients</h4>
@@ -33,6 +34,5 @@
                 <li>In a large bowl, beat cream cheese and sugar together until smooth. Beat in sour cream and heavy cream. Blend in the flour and vanilla. With mixer on low speed, add eggs one at a time. Pour batter over crust.</li>
                 <li>Bake in the preheated oven for 60 to 70 minutes, or until center is almost set (filling will be soft). Refrigerate at least 6 hours or overnight before removing from pan.</li>
             </ol>
-
 </body>
 </html>
