--- a/recipes/deviled-eggs.html
+++ b/recipes/deviled-eggs.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deviled Eggs</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Deviled Eggs</h1>
-    <img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2012/11/14/1/RX-MCCORMICK_Delicious-Deviled-Eggs_s4x3.jpg.rend.hgtvcom.826.620.suffix/1371612115196.jpeg" alt="Deviled Eggs">
+    <img class="image" src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2012/11/14/1/RX-MCCORMICK_Delicious-Deviled-Eggs_s4x3.jpg.rend.hgtvcom.826.620.suffix/1371612115196.jpeg" alt="Deviled Eggs">
         <h2>Description</h2>
         <p> <strong>hard-boiled eggs</strong> that have been shelled, cut in half, and filled with a paste made from the egg yolks mixed with other ingredients such as mayonnaise and mustard. They are generally served cold as a side dish, appetizer or a main course during gatherings or parties. The dish's origin can be seen in recipes for boiled, seasoned eggs as far back as ancient Rome, where they were traditionally served as a first course. The dish is popular in Europe and North America.</p>
         <h4>Brief History</h4>    
